presenting 'Temperature OR Resistance' in form labels

--- a/app/views/iec60751_measurements/new.html.slim
+++ b/app/views/iec60751_measurements/new.html.slim
@@ -2,6 +2,7 @@
   fieldset 
     legend New IEC 60751 Measurement
     = f.input :temperature, required: false
+    span or
     = f.input :resistance
 
     = f.input :r0
