--- a/app/views/iec60751_measurements/new.html.slim
+++ b/app/views/iec60751_measurements/new.html.slim
@@ -1,18 +1,13 @@
 h1 New IEC 60751 Measurement
 
-= simple_form_for @measurement do |f|
+= simple_form_for [@prt, @measurement] do |f|
   fieldset 
     legend Details
     = f.error_notification
     = f.error :base
 
-    = f.input :temperature, required: false
+    = f.input :temperature
     span or
     = f.input :resistance
-
-    = f.input :r0
-    = f.input :a
-    = f.input :b
-    = f.input :c
 
     = f.button :submit
