changed disable_with option (to be deprecated in rails 4.1)

--- a/app/views/iec60751_prts/new.html.slim
+++ b/app/views/iec60751_prts/new.html.slim
@@ -13,4 +13,4 @@ h1 New IEC 60751 Platinum Resistance Thermometer
     = f.input :b
     = f.input :c
 
-    = f.button :submit, disable_with: 'Submitting...'
+    = f.button :submit, data: { disable_with: 'Submitting...' }
