--- a/app/views/its90_prts/new.html.slim
+++ b/app/views/its90_prts/new.html.slim
@@ -25,4 +25,4 @@ h1 New ITS-90 Platinum Resistance Thermometer
     = f.input :c4
     = f.input :c5
 
-    = f.button :submit, disable_with: 'Submitting...'
+    = f.button :submit, data: { disable_with: 'Submitting...' }
