--- a/app/views/prt_measurements/new.html.slim
+++ b/app/views/prt_measurements/new.html.slim
@@ -10,4 +10,4 @@ h1 New PRT Measurement
     span or
     = f.input :resistance
 
-    = f.button :submit, disable_with: 'Submitting...'
+    = f.button :submit, data: { disable_with: 'Submitting...' }
