--- a/app/views/prt_measurements/new.html.slim
+++ b/app/views/prt_measurements/new.html.slim
@@ -2,12 +2,13 @@ h1 New PRT Measurement
 
 = simple_form_for [@prt, @measurement] do |f|
   fieldset 
-    legend Details
     = f.error_notification
     = f.error :base
 
-    = f.input :temperature
-    span or
-    = f.input :resistance
+    section.form-inputs
+      = f.input :temperature
+      span or
+      = f.input :resistance
 
-    = f.button :submit, data: { disable_with: 'Submitting...' }
+    section.form-actions
+      = f.button :submit, data: { disable_with: 'Submitting...' }
