measurements belong to transfer_functions instead of meters (association renamed)

--- a/app/views/measurements/_search_from_to.html.slim
+++ b/app/views/measurements/_search_from_to.html.slim
@@ -1,4 +1,4 @@
-= form_tag [@meter, :measurements], method: :get do
+= form_tag [@transfer_function, :measurements], method: :get do
   fieldset 
     legend Search
     label From
