--- a/app/views/prt_measurements/new.html.slim
+++ b/app/views/prt_measurements/new.html.slim
@@ -1,6 +1,6 @@
 h1 New PRT Measurement
 
-= simple_form_for [@meter, @measurement] do |f|
+= simple_form_for [@transfer_function, @measurement] do |f|
   fieldset 
     = f.error_notification
     = f.error :base
