--- a/app/views/iec60751_functions/new.html.slim
+++ b/app/views/iec60751_functions/new.html.slim
@@ -1,6 +1,6 @@
-h1 New IEC 60751 Platinum Resistance Thermometer
+h1 New IEC 60751 Function
 
-= simple_form_for @prt do |f|
+= simple_form_for @function do |f|
   fieldset 
     = f.error_notification
     = f.error :base
